Read the whole backend back, and fix what a reviewer would stop on
Every file of main source, ~4,500 lines. Behaviour is unchanged and the
175 tests pass exactly as before — that was the constraint, and the
untouched suite is the evidence for it.

Two real bugs, and they are the same bug. toLowerCase() and
"…".formatted(…) use the JVM's default locale, and in Turkish 'I'
lowercases to the dotless 'ı'. AdminBoardService.normalise turned
"INFINITE" into "ınfınıte", which matches no mode; AdminAuditEntry.label()
renders the audit page as "sıgned ın" on a machine set to Turkish and
"signed in" in the container, from the same code. LeaderboardService had
this right already and the copies did not. Every case conversion, all four
DateTimeFormatters and the one String.format now name Locale.ROOT: if a
string is an identifier rather than somebody's prose, say which locale.

One structural change. D26's lesson was to guard the property and not the
path, and the fix at the time only half-took — what was left said the same
thing twice, as two path constants and two capacity fields in
RateLimitFilter plus a ternary on one of those paths in RateLimitConfig.
A third guarded endpoint meant three edits across two files with nothing to
fail if one was forgotten. RateLimitedEndpoint is now a single table: path,
audience (API gets a ProblemDetail, BROWSER gets a redirect), and which
property sizes it. Adding an endpoint is one line. The filter loses its
admin boolean, its duplicated refusal method and forty lines.

Four comments had become lies, which is worse than no comment because they
are trusted. LeaderboardController still described a Caller class and an
@RequestAttribute, both gone since D19. TokenController claimed
HttpServletRequest appears there and nowhere else; four admin classes take
one now. PlayerController.me said it creates the profile. SecurityConfig.api
carried two stacked javadoc blocks, so the one documenting docsEnabled was
attached to nothing at all.

Two silence